--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -H 0.0.0.0 --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:static": "next build && next export -o static_build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.3",
